2011-05-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

 	* FiltersToolbox/skeleton_label.m:

	- (v0.7.0) Add output field cc.BifurcationPixelIdx.

2011-05-13  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* ItkToolbox/FilterFactoryExclusions.hpp:

	- (v0.1.0) Add exclusions for SignedMaurerDistanceMapImageFilter.

	* ItkToolbox/ItkImFilter.cpp:

	- Add SignedMaurerDistanceMapImageFilter to compute signed
	distances in real world coordinates.

	- (v0.3.3) Thanks to a new FilterParamFactory class with explicit
	specialization, we can treat each filter type differently in terms
	of parameters. So e.g. we can run filter->SetAlpha1(0.3) for a
	certain filter type, but don't do it for the rest.

	- (v0.3.2) Move template explicit specialization code to
	ItkToolbox/FilterFactoryExclusions.hpp, add comments so that the
	code can be well understood and tidy up.

	* Add ItkToolbox/FilterFactoryExclusions.hpp:

	-  This is a file to remove some cluttering from file
	ItkImFilter.cpp. It contains the template explicit specialization
	code that prevents the compiler from trying to instantiate certain
	input/output image types for certain filters.

2011-05-12  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* ItkToolbox/ItkImFilter.cpp:

	- (v0.3.1) Very big internal change in architecture, that doesn't
	change the interface. Now, instead of nesting switch and if
	clauses in mexFunction() to instantiate the different combinations
	of input/output image type, we have created functions that allow
	us to translate from the type variables to type templates. Now we
	can run all filters with one FilterFactory, because types not
	supported by each filter can be explicitely removed from the
	compilation. These changes came after a lengthly discussion with
	Miguel Bernabeu who figured out the problem I had to solve.

	- (v0.3.0) Accept SCI NRRD structs created by scinrrd_load() as
	input, so that we can pass image resolution and offset to the