@@ -1,3 +1,10 @@
+2011-05-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* ItkToolbox/ItkImFilter.cpp (FilterParamFactory):
+
+	- Make Maurer filter give the output in actual Euclidean
+	distances, not squared ones.
+
 2011-05-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
  	* FiltersToolbox/skeleton_label.m:
